emulatorJs/deploymentl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emulatorjs
  labels:
    app: emulatorjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emulatorjs
  template:
    metadata:
      labels:
        app: emulatorjs
    spec:
      containers:
      - name: emulatorjs
        image: lscr.io/linuxserver/emulatorjs:latest
        ports:
        - containerPort: 3000
        - containerPort: 80
        - containerPort: 4001
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /data
          name: data
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: nfs-config-pvc
      - name: data
        persistentVolumeClaim:
          claimName: nfs-pvc
