emulatorJs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emulatorjs
spec:
  selector:
    app: emulatorjs
  ports:
    - port: 80
      targetPort: 80
      name: http
    - port: 3000
      targetPort: 3000
      name: webui
    - port: 4001
      targetPort: 4001
      name: ext
  type: ClusterIP
