emulatorJs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emulatorjs
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - emulatorjs.localhome.com
    secretName: emulatorjs-tls
  rules:
  - host: emulatorjs.localhome.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: emulatorjs
            port:
              number: 80
      - path: /webui
        pathType: Prefix
        backend:
          service:
            name: emulatorjs
            port:
              number: 3000
